syntax = "proto3";

option csharp_namespace = "Agrovision.Spray_Calculator.gRPC.Protos";

package Spray_Calculatorproto;

service Spray_CalculatorGRPCService {
 rpc CalculateSpray (CalculateSprayRequest) returns (CalculateSprayResponse);
  rpc CreateField (FieldModel) returns (FieldModel);
 rpc GetActiveFields (FieldLookup) returns (ListFieldModel);
}

message CalculateSprayRequest {
 double agentReq =1;
 double fieldSize =2;
 double waterRate =3;
}
message CalculateSprayResponse {
 double agentValue =1;
 double waterValue =2;
}

message FieldModel {
 int64 Id = 1;
 string FieldKey = 2;
 string UserKey = 3;
 string Description = 4;
 double FieldSize =5;
 bool IsActive = 6;
}
message ListFieldModel {
 repeated FieldModel FieldList = 1;
}
message FieldLookup {
 int32 page = 1;
 int32 pageSize = 2;
}